Fix card sizes on smaller devices

--- a/src/layouts/components/_services.scss
+++ b/src/layouts/components/_services.scss
@@ -50,7 +50,7 @@
         overflow: hidden;
         border: 1px solid #EEEEEE;
         box-shadow: 0 5px 4px 0 rgba(225,225,225,0.50);
-        flex: 1 0 14em;
+        flex: 1 0 75%;
         margin-right: 2em;
         display: flex;
         flex-direction: column;
