--- a/src/layouts/components/_testimonials.scss
+++ b/src/layouts/components/_testimonials.scss
@@ -38,7 +38,7 @@
         border-radius: 10px;
         border: 1px solid #EEEEEE;
         box-shadow: 0 5px 4px 0 rgba(225,225,225,0.50);
-        flex: 1 0 13em;
+        flex: 1 0 75%;
         margin-right: 2em;
         @include mappy-bp(mobile) {
             flex: 1 0 17em;
